2011-09-14:
===========
- Added support for swiping (transition between pages)