@@ -1,8 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<widget xmlns = "http://www.w3.org/ns/widgets" xmlns:gap = "http://phonegap.com/ns/1.0" id = "at.gofg.sportscomputer" version = "0.0.1">
-	<name>GOFG Sports Computer</name>
-	<description>A cross platform sports tracker</description>
-	<author href="http://www.gofg.at" email="viras@users.sourceforge.net">Wolfgang Koller</author>
-
-	<feature name="http://api.phonegap.com/1.0/geolocation"/>
-</widget>
