@@ -24,6 +24,8 @@ german = German
 show_dyk = Show "Did you know?":
 hide = Hide
 show = Show
+odoReset = Reset odo-meter
+odoConfirm = Confirm
 # Tracks page
 load = Load
 export = Export
