@@ -24,6 +24,8 @@ german = Deutsch
 show_dyk = Zeige "Wusstest du schon?":
 hide = Nein
 show = Ja
+odoReset = Reset odo-Meter
+odoConfirm = Bestätigen
 # Tracks page
 load = Laden
 export = Exportieren
