@@ -274,261 +274,3 @@ Summary.prototype._pageshow = function( p_event, p_ui ) {
 };
 
 new Summary();
-
-
-//pages.summary = {
-//		m_mainTimer : 0,		// Reference for the main timer
-//		m_contentHeight : 0,	// Calculated height for one infopanel row
-//		m_speedCounter : 0,		// Countdown until speed is set to zero (required because if GPS does not report a new position we do not update)
-//		m_pauseStart : 0,		// Timestamp when the user clicked the pause button
-//		
-//		init : function() {
-//			console.log( "summary-page loaded!" );
-//			
-//			// Translate page
-//			Translator.register($('#summary-page'));
-//			// Setup top toolbar
-//			$( '#stop-button' ).live( 'tap', pages.summary._stopGPS );
-//			$( '#start-button' ).live( 'tap', pages.summary._startGPS );
-//			$( '#pause-button' ).live( 'tap', pages.summary._pause );
-//			$( '#resume-button' ).live( 'tap', pages.summary._resume );
-//			
-//			$( '#summary-page' ).live( 'pageshow', pages.summary._pageshow );
-//		},
-//		
-//		_mainTimer : function() {
-//			// Update speed counter
-//			pages.summary.m_speedCounter--;
-//			if( pages.summary.m_speedCounter <= 0 ) {
-//				pages.summary.m_speedCounter = SettingsHandler.get( 'speedCounter' );
-//				$( '#speed-infopanel' ).infopanel( 'setValue', 0.0 );
-//			}
-//			
-//			pages.summary._updateDisplay();
-//			pages.summary.m_mainTimer = setTimeout( "pages.summary._mainTimer()", 1000 );
-//		},
-//
-//		/**
-//		 * Update the display of the app (regular interval, once a second)
-//		 */
-//		_updateDisplay : function() {
-//			$( '#speed-infopanel' ).infopanel( 'setValue', (TrackHandler.getSpeed() * 3.6).toFixed(2) );
-//			$( '#speed-infopanel' ).infopanel( 'setStatistics', (TrackHandler.getAverageSpeed() * 3.6).toFixed(2), (TrackHandler.getMaximumSpeed() * 3.6).toFixed(2) );
-//			$( '#distance-infopanel' ).infopanel( 'setValue', (TrackHandler.getTotalDistance() / 1000.0).toFixed(2) );
-//			$( '#altitude-infopanel' ).infopanel( 'setValue', TrackHandler.getElevationGain().toFixed(2) );
-//			$( '#altitude-infopanel' ).infopanel( 'setInfo', TrackHandler.getElevationRise().toFixed(2) + "% / &Oslash; " + TrackHandler.getAverageElevationRise().toFixed(2) + "%" );
-//			$( '#status-infopanel' ).infopanel( 'setValue', TrackHandler.getAccuracy() + " / " + TrackHandler.getAltitudeAccuracy() );
-//			$( '#timer-infopanel' ).infopanel( 'setValue', getFormattedTimeDiff(TrackHandler.getDuration(), true) );
-//		},
-//		
-//		/**
-//		 * Update & display odo value
-//		 */
-//		_updateOdo : function( p_distance ) {
-//			var odo = parseFloat(window.localStorage.getItem( "odo" ));
-//			if(isNaN(odo) ) odo = 0;
-//
-//			if( p_distance != undefined ) {
-//				odo += p_distance;
-//			}
-//			window.localStorage.setItem( "odo", odo );
-//			
-//			$( '#distance-infopanel' ).infopanel( 'setInfo', "odo: " + (odo / 1000.0).toFixed(2) + "km" );
-//		},
-//
-//		/**
-//		 * Button onClick-handler for starting GPS tracking
-//		 */
-//		_startGPS : function() {
-//			console.log( "Start-GPS called" );
-//			
-//			$( '#stop-button' ).show();
-//			$( '#start-button' ).hide();
-//			$( '#pause-button' ).show();
-//			
-//			pages.summary.m_speedCounter = 0;	// Reset speed counter
-//			
-//			TrackHandler.startTrack();
-//			GPSHandler.startGPS( 5, pages.summary._updatePosition );
-//			window.plugins.PowerManagement.acquire(
-//		    	function(){ console.log( "Success!" ) },
-//				function(e){ console.log( "Error: " + e ) }
-//			);
-//			
-//			// Start updating our interface
-//			pages.summary._mainTimer();
-//		},
-//
-//		/**
-//		 * Button onClick-handler for stopping GPS tracking
-//		 */
-//		_stopGPS : function() {
-//			console.log( "Stop-GPS called" );
-//			
-//			$( '#start-button' ).show();
-//			$( '#stop-button' ).hide();
-//			$( '#pause-button' ).hide();
-//			
-//			GPSHandler.stopGPS();
-//			TrackHandler.stopTrack();
-//			window.plugins.PowerManagement.release(
-//		    	function(){ console.log( "Success!" ) },
-//				function(e){ console.log( "Error: " + e ) }
-//			);
-//			
-//			// Disable interface timer
-//			if( pages.summary.m_mainTimer != 0 ) clearTimeout(pages.summary.m_mainTimer);
-//			pages.summary.m_mainTimer = 0;
-//		},
-//		
-//		/**
-//		 * Called when the pause button is clicked
-//		 */
-//		_pause : function() {
-//			console.log( "Pause called" );
-//			
-//			pages.summary.m_pauseStart = ((new Date()).getTime() / 1000).toFixed(0);
-//			// Stop GPS tracking
-//			GPSHandler.stopGPS();
-//			// Disable interface timer
-//			if( pages.summary.m_mainTimer != 0 ) clearTimeout(pages.summary.m_mainTimer);
-//			pages.summary.m_mainTimer = 0;
-//			// Enable suspend again
-//			window.plugins.PowerManagement.release(
-//				function(){ console.log( "Success!" ) },
-//				function(e){ console.log( "Error: " + e ) }
-//			);
-//			
-//			// Hide / Show the buttons
-//			$( '#stop-button' ).hide();
-//			$( '#pause-button' ).hide();
-//			$( '#resume-button' ).show();
-//		},
-//		
-//		/**
-//		 * Called when the resume button is clicked
-//		 */
-//		_resume : function() {
-//			console.log( "Resume called" );
-//
-//			var pauseEnd = ((new Date()).getTime() / 1000).toFixed(0);
-//			
-//			// Start GPS again
-//			GPSHandler.startGPS( 5, pages.summary._updatePosition );
-//			// Disable suspend
-//			window.plugins.PowerManagement.acquire(
-//		    	function(){ console.log( "Success!" ) },
-//				function(e){ console.log( "Error: " + e ) }
-//			);
-//			
-//			// Add pause to track
-//			TrackHandler.addPause( pages.summary.m_pauseStart, pauseEnd );
-//			pages.summary.m_pauseStart = 0;
-//			
-//			// Start updating our interface
-//			pages.summary._mainTimer();
-//
-//			// Hide / Show the buttons
-//			$( '#resume-button' ).hide();
-//			$( '#stop-button' ).show();
-//			$( '#pause-button' ).show();
-//		},
-//		
-//		/**
-//		 * Callback for the GPSHandler which is called whenever the GPS position is updated
-//		 */
-//		_updatePosition : function() {
-//			//console.log( "updatePosition" );
-//			// Update odo (total distance - see odometer)
-//			pages.summary._updateOdo( GPSHandler.getDistance() );
-//			
-//			// Add new position info to track
-//			TrackHandler.addDistance( GPSHandler.getDistance() );
-//			TrackHandler.addSpeed( GPSHandler.getSpeed() );
-//			TrackHandler.addPosition( GPSHandler.getLatitude(), GPSHandler.getLongitude(), GPSHandler.getAltitude() );
-//			TrackHandler.addAccuracy( GPSHandler.getAccuracy(), GPSHandler.getAltitudeAccuracy() );
-//		},
-//		
-//		/**
-//		 * Updates the clock (called once a minute)
-//		 */
-//		_updateClock : function() {
-//			$( '#clock-infopanel' ).infopanel( 'setValue', formatDate( new Date() ) );
-//			setTimeout( "pages.summary._updateClock()", 60000 );
-//		},
-//		
-//		_pageshow : function( p_event, p_ui ) {
-//			// Remove init handler
-//			$( '#summary-page' ).die( 'pageshow', pages.summary._pageshow );
-//
-//			// Apply layout to all info-panels
-//			var rowHeight = (pages.summary.m_contentHeight / 7).toFixed(0);
-//			//console.log( "Row height: " + rowHeight );
-//
-//			// Speed infopanel
-//			$( '#speed-infopanel' ).infopanel( {
-//				'value' : '0.00',
-//				'maxSizeValue' : '000.00',
-//				'size' : { 'width' : 'auto', 'height' : rowHeight * 3 },
-//				'image' : 'images/gowebsite24.png',
-//				'unit' : 'km/h',
-//				'showStatistics' : true
-//			} );
-//			$( '#speed-infopanel' ).infopanel( 'setStatistics', "0.00", "0.00" );
-//
-//			// Distance infopanel
-//			$( '#distance-infopanel' ).infopanel( {
-//				'value' : '0.00',
-//				'maxSizeValue' : '000.00',
-//				'size' : { 'width' : 'auto', 'height' : rowHeight * 3 },
-//				'image' : 'images/web24.png',
-//				'unit' : 'km',
-//				'showStatistics' : true
-//			} );
-//			// Show initial odo
-//			pages.summary._updateOdo();
-//			
-//			// Altitude infopanel
-//			$( '#altitude-infopanel' ).infopanel( {
-//				'value' : '0.0',
-//				'maxSizeValue' : '0000.0',
-//				'size' : { 'width' : 'auto', 'height' : rowHeight * 2 },
-//				'image' : 'images/pictures24.png',
-//				'unit' : 'm',
-//				'showStatistics' : true
-//			} );
-//			$( '#altitude-infopanel' ).infopanel( 'setInfo', "0.00% / &Oslash; 0.00%" );
-//
-//			// Status infopanel
-//			$( '#status-infopanel' ).infopanel( {
-//				'value' : '-',
-//				'maxSizeValue' : '000_/_000',
-//				'size' : { 'width' : 'auto', 'height' : rowHeight * 2 },
-//				'image' : 'images/find24.png',
-//				'unit' : 'Accuracy (m)'
-//			} );
-//			
-//			// Timer infopanel
-//			$( '#timer-infopanel' ).infopanel( {
-//				'value' : '00:00:00',
-//				'maxSizeValue' : '00:00:00',
-//				'size' : { 'width' : 'auto', 'height' : (pages.summary.m_contentHeight - 5 * rowHeight) },
-//				'image' : 'images/timer24.png',
-//				'unit' : 'hh:mm:ss'
-//			} );
-//
-//			// Clock infopanel
-//			$( '#clock-infopanel' ).infopanel( {
-//				'value' : '00:00',
-//				'size' : { 'width' : 'auto', 'height' : (pages.summary.m_contentHeight - 5 * rowHeight) },
-//				'image' : 'images/clock24.png',
-//				'unit' : 'hh:mm'
-//			} );
-//
-//			// Add clock timer
-//			pages.summary._updateClock();
-//			$( '#stop-button' ).hide();
-//			$( '#pause-button' ).hide();
-//			$( '#resume-button' ).hide();
-//		}
-//};
