@@ -7,7 +7,7 @@
 		<a id="settings-save-button" href="#" data-icon="check" class="ui-btn-right" data-i18n="save"></a>
 		<div data-role="navbar" data-id="menu-navbar">
 			<ul>
-				<li><a href="map.html" data-icon="gofgsc-map" data-direction="reverse">Map</a></li>
+				<!-- <li><a href="map.html" data-icon="gofgsc-map" data-direction="reverse">Map</a></li> -->
 				<li><a href="#" class="ui-btn-active ui-state-persist" data-icon="gear" data-i18n="settings"></a></li>
 				<li><a href="tracks.html" data-icon="grid" data-i18n="tracks"></a></li>
 			</ul>
@@ -45,5 +45,7 @@
 			</select>
 		</div>
 		</form>
+		<a id="settings-odoReset-button" href="#" data-role="button" data-icon="delete" data-i18n="odoReset"></a>
+		<a id="settings-odoConfirm-button" href="#" data-role="button" data-icon="check" data-i18n="odoConfirm"></a>
 	</div>
 </div>
