@@ -7,7 +7,7 @@
 		<a href="#" data-icon="reload" id="tracks-load-button" class="ui-btn-right" data-i18n="load">Load</a>
 		<div data-role="navbar" data-id="menu-navbar">
 			<ul>
-				<li><a href="map.html" data-icon="gofgsc-map" data-direction="reverse">Map</a></li>
+				<!-- <li><a href="map.html" data-icon="gofgsc-map" data-direction="reverse">Map</a></li> -->
 				<li><a href="settings.html" data-icon="gear" data-direction="reverse" data-i18n="settings"></a></li>
 				<li><a href="#" class="ui-btn-active ui-state-persist" data-icon="grid" data-i18n="tracks"></a></li>
 			</ul>
