@@ -1,3 +1,7 @@
+2011-09-16:
+===========
+- Added reset button for odo-meter
+
 2011-09-14:
 ===========
 - Added support for swiping (transition between pages)
